<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/users_profile_image"
        android:layout_width="55dp"
        android:layout_height="55dp"

        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_profile" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/users_status_icon"
        android:layout_width="12dp"
        android:layout_height="12dp"
        app:layout_constraintEnd_toEndOf="@+id/users_profile_image"
        app:layout_constraintTop_toTopOf="@+id/users_profile_image"
       />

    <TextView
        android:id="@+id/user_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="12dp"
        android:text="@string/name"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/users_profile_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/users_profile_image"
        app:layout_constraintTop_toTopOf="@+id/users_profile_image"

        app:layout_constraintVertical_bias="0.13999999" />

    <TextView
        android:id="@+id/text_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        android:singleLine="true"
        android:text="@string/status"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/users_profile_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/users_profile_image"

        app:layout_constraintTop_toTopOf="@+id/users_profile_image"
        app:layout_constraintVertical_bias="0.98" />

    <TextView
        android:id="@+id/text_last_message_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="@string/_5_33_pm"
        app:layout_constraintBottom_toBottomOf="@+id/user_profile_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/user_profile_name" />

</androidx.constraintlayout.widget.ConstraintLayout>