<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vteam.testdemo.profile.ProfileUpdateActivity">

    <include

        android:id="@+id/settings_toolbar"
        layout="@layout/app_bar_layout"></include>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/set_profile_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/profile_image"
        app:civ_border_color="@color/colorPrimary"
        app:civ_border_width="2dp"

        android:layout_marginTop="@dimen/dp_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_toolbar" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image_edit"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="174dp"
        app:layout_constraintHorizontal_bias="0.65"
        android:src="@drawable/ic_baseline_photo_camera_24"
        app:civ_border_color="@color/colorPrimary"

        app:civ_border_width="1dp"
        app:civ_circle_background_color="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_toolbar" />

    <EditText
        android:id="@+id/set_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/set_profile_image"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:hint="@string/username"
        android:inputType="textMultiLine"
        android:padding="12dp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/set_profile_image"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/set_profile_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/ic_baseline_update_24"
        android:hint="@string/hey_i_am_available_now"
        android:inputType="textMultiLine"
        android:padding="12dp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/set_user_name"/>

    <EditText
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/ic_baseline_add_location_24"
        android:hint="@string/location"
        android:inputType="textMultiLine"
        android:padding="12dp"
        app:layout_constraintVertical_bias="0.0"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/set_profile_status"
        app:layout_constraintBottom_toBottomOf="@+id/update_settings_button"/>

    <Button
        android:id="@+id/update_settings_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/set_profile_status"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="@dimen/dp_24"
        android:background="@drawable/buttons"
        android:inputType="textMultiLine"
        android:padding="6dp"
        android:text="@string/update"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>